# ulysses-curiosity

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  poetry.toml  pyproject.toml
.github/workflows/: tests.yml
curiosidade/: __init__.py  core.py
curiosidade/adapters/: __init__.py  _base.py  base.py  extensors.py  model_adapter.py  pruners.py
curiosidade/helpers/: __init__.py  flow_analyzer.py
curiosidade/input_handlers/: handlers.py
curiosidade/output_handlers/: handlers.py
curiosidade/probers/: __init__.py  _base.py  probers.py  utils.py
curiosidade/probers/tasks/: __init__.py  base.py  tasks.py  utils.py
curiosidade/tasks/: base.py  tasks.py
docs/source/: api_reference.md  conf.py  index.md
docs/source/_static/: PREPROCESSED_README.md
examples/: 1_simple_torch_example.ipynb  2_huggingface_bert_example_binary_sentlen.ipynb  3_huggingface_bert_example_sentlen.ipynb  4_sentence_bert_(sbert)_example.ipynb  4_sentence_bert_example.ipynb  5_bifurcation_torch_example.ipynb  6_using_a_preconfigured_probing_task.ipynb
notebooks/: test_notebook.ipynb
tests/: architectures.py  conftest.py  model_utils.py  test_errors_and_warnings.py  test_preconfig_probing_tasks.py  test_probes.py  test_warnings.py  train_test_models.py
