[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.flit.module]
name = "curiosidade"

[project]
name = "ulysses-curiosity"
version = "0.5.3"
description = "Implement probing tasks for models trained on brazilian legal documents."
authors = [
    {name="felsiq", email= "felipe.siqueira@usp.br"}
]

requires-python = ">=3.9"

dependencies = [
    "torch >= 1.11.0",
    "numpy >= 1.22.3",
    "regex >= 2022.3.15",
    "pandas >= 1.4.2",
    "tqdm >= 4.64.0",
    "buscador @ git+https://github.com/ulysses-camara/ulysses-fetcher@v1.2.1-beta",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.1.1",
    "tox >= 3.25.0",
    "mypy >= 0.942",
    "pylint >= 2.13.5",
    "black >= 22.3.0",
    "pytest-cov >= 3.0.0",
    "pytest-html >= 3.1.1",
    "pytest-xdist >= 3.0.2",
    "pytest-env >= 0.8.1",
    "datasets >= 2.1.0",
    "sentence-transformers >= 2.2.0",
    "torchmetrics >= 0.8.0",
]

examples = [
    "notebook >= 6.4.10",
    "torchmetrics >= 0.8.0",
    "seaborn >= 0.11.2",
    "transformers >= 4.18.0",
    "sentence-transformers >= 2.2.0",
    "datasets >= 2.1.0",
]

docs = [
    "sphinx == 4.5.0",
    "myst-parser == 0.17.2",
    "sphinxcontrib-mermaid == 0.7.1",
    "numpydoc == 1.2.1",
    "sphinx-autoapi == 1.8.4",
    "sphinx-rtd-theme == 1.0.0",
]

[tool.mypy]
ignore_missing_imports = true
strict_equality = true
show_error_codes = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
warn_redundant_casts = true
warn_incomplete_stub = true
non_interactive = true
install_types = true

[tool.pytest.ini_options]
addopts = """
    --cov=curiosidade
    --failed-first
    --new-first
    --cov-report=html
"""
testpaths = [
    "tests",
]
env = """
    D:CUDA_VISIBLE_DEVICES="-1"
"""

[tool.pylint.messages_control]
generated-members = "torch.*"
jobs = 4
disable = """
    too-few-public-methods,
    too-many-locals,
    too-many-arguments,
    too-many-statements,
    too-many-branches,
    import-outside-toplevel,
    too-many-instance-attributes,
    too-many-lines
"""
min-similarity-lines=10

[tool.black]
line-length=100

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310, mypy, pylint
isolated_build = true

[gh-actions]
python =
    3.9: mypy, pylint, py39
    3.10: py310

[testenv]
whitelist_externals = flit
commands =
    pip install '.[dev,examples]'
    python -m pytest --numprocesses=auto --maxprocesses=4 --full-trace
    python -m pytest curiosidade/ --doctest-modules --doctest-glob="**/*.py"

[testenv:mypy]
basepython = python3.9
deps = mypy
commands =
    python -m mypy --install-types --non-interactive curiosidade/
    python -m mypy curiosidade/

[testenv:pylint]
basepython = python3.9
deps =
    pylint
    pytest
    pandas
    torch
    regex
    tqdm
    torchmetrics
    transformers
    sentence_transformers
    datasets
    buscador @ git+https://github.com/ulysses-camara/ulysses-fetcher@v1.2.1-beta
commands =
    python -m pylint --jobs=4 curiosidade/
    python -m pylint --disable='missing-function-docstring,invalid-name' tests/
"""
